Updated method call to correct Java version equivalent